listAll: implemented listAll handler with support of full-text search, paginating, filtering swagger: improved swagger docs (better @Failure description filters: add data/filters.go to help with filters
