# backend/cmd/api/docs/swagger.json
@@ -1,6 +1,7 @@
 {
     "schemes": [
-        "http"
+        "http",
+        "https"
     ],
     "swagger": "2.0",
     "info": {
@@ -41,7 +42,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Get all movies (may support pagination)",
+                "description": "Retrieve a list of movies filtered by title and genres with pagination and sorting",
                 "produces": [
                     "application/json"
                 ],
@@ -49,16 +50,67 @@
                     "movies"
                 ],
                 "summary": "List movies",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Full-text search by title",
+                        "name": "title",
+                        "in": "query"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "collectionFormat": "csv",
+                        "description": "Comma-separated list of genres",
+                        "name": "genres",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 20,
+                        "description": "Number of items per page",
+                        "name": "page_size",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "default": "id",
+                        "description": "Sort by: one of id,title,year,runtime,-id,-title,-year,-runtime",
+                        "name": "sort",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
+                            "$ref": "#/definitions/main.MoviesListResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
                             "type": "object",
                             "additionalProperties": {
-                                "type": "array",
-                                "items": {
-                                    "type": "object"
-                                }
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
                             }
                         }
                     }
@@ -205,13 +257,7 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
+                        "description": "Bad Request Example: {\"error\":\"invalid request\"}"
                     },
                     "404": {
                         "description": "Not Found",
@@ -631,6 +677,31 @@
         }
     },
     "definitions": {
+        "data.Metadata": {
+            "type": "object",
+            "properties": {
+                "current_page": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "first_page": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "last_page": {
+                    "type": "integer",
+                    "example": 5
+                },
+                "page_page": {
+                    "type": "integer",
+                    "example": 20
+                },
+                "total_records": {
+                    "type": "integer",
+                    "example": 100
+                }
+            }
+        },
         "data.Movie": {
             "type": "object",
             "properties": {
@@ -688,6 +759,20 @@
                 "name": {
                     "type": "string",
                     "example": "John Doe"
+                }
+            }
+        },
+        "main.MoviesListResponse": {
+            "type": "object",
+            "properties": {
+                "metadata": {
+                    "$ref": "#/definitions/data.Metadata"
+                },
+                "movies": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/data.Movie"
+                    }
                 }
             }
         },
